# modernIIe

./: Cargo.toml  build.rs  build.sh  flash.sh  readme.md
.cargo/: config.toml
src/: errors.rs  main.rs  mod.rs  state.rs
src/drivers/: mod.rs
src/drivers/no_std/: mod.rs
src/drivers/no_std/kb/: driver.rs  input.rs  mod.rs  oracle.rs  state.rs
src/drivers/no_std/kb/decoder/: debounce.rs  key_mapping.rs  keyscan.rs  matrix.rs  mod.rs  pinouts.md  readme.md
src/drivers/no_std/kb/kbmap/: hid.rs  hid.rs.bak  mod.rs
src/drivers/shared/: mod.rs
src/drivers/shared/kb/: mod.rs  structs.rs  traits.rs
src/drivers/std/kb/: driver.rs  handshake.rs  input.rs  kbmap.rs  mod.rs  state.rs
src/drivers/std/kb/events/: input.rs
src/drivers/std/kb/vdev/: device.rs  emitter.rs  key_codex.rs  mod.rs  state.rs
src/shims/: mod.rs
src/utils/: hex.rs  mod.rs
